--- a/css/index.css
+++ b/css/index.css
@@ -166,3 +166,181 @@ section p {
 .footer p {
     margin: 0.5rem 0;
 }
+
+/* index.css */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.6;
+    color: #333;
+    background-color: #f8f9fa;
+}
+
+.container {
+    width: 90%;
+    max-width: 1200px;
+    margin: auto;
+    overflow: hidden;
+}
+
+header {
+    background: #fff;
+    color: #000000;
+    padding: 1rem 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header .logo h1 {
+    margin: 0;
+}
+
+header nav ul {
+    list-style: none;
+    display: flex;
+    margin-left: auto;
+}
+
+header nav ul li {
+    margin-left: 10px;
+}
+
+header nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 5px 10px;
+    transition: background 0.3s;
+}
+
+header nav ul li a:hover {
+    background: #575757;
+    border-radius: 5px;
+}
+
+.hero {
+    background-color: #003049;
+    color: #fff;
+    padding: 4rem 0;
+    text-align: center;
+}
+
+.hero h2 {
+    margin-bottom: 1rem;
+    font-size: 2.5rem;
+}
+
+.hero p {
+    font-size: 1.05rem;
+}
+
+.hero .btn {
+    background: #fff;
+    color: #000000;
+    padding: 0.75rem 1.5rem;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background 0.3s;
+    display: inline-block; /* Asegúrate de que el botón se comporte como un bloque en línea */
+    margin-top: 1rem; /* Agrega un margen superior para separar el botón del contenido anterior */
+}
+
+.hero .btn:hover {
+    background: #0057b3;
+}
+
+section {
+    padding: 3rem 0;
+    text-align: center;
+}
+
+section h2 {
+    margin-bottom: 1.5rem;
+    font-size: 2rem;
+}
+
+section p {
+    margin-bottom: 2rem;
+    font-size: 1.125rem;
+}
+
+.service-list, .plan-list, .testimonial-list {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.service-item, .plan-item, .testimonial-item {
+    background: #f4f4f4;
+    padding: 1.5rem;
+    margin: 0.5rem;
+    flex-basis: 30%;
+    border-radius: 5px;
+    transition: transform 0.3s;
+}
+
+.service-item:hover, .plan-item:hover, .testimonial-item:hover {
+    transform: translateY(-10px);
+}
+
+.service-item h3, .plan-item h3, .testimonial-item h3 {
+    margin-bottom: 0.5rem;
+}
+
+.team {
+    background-color: #fff;
+    padding: 80px 0;
+    text-align: center;
+}
+
+.team h2 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+}
+
+.team p {
+    font-size: 1.2rem;
+    line-height: 1.6;
+    margin-bottom: 30px;
+}
+
+.team-cards {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+
+.team-card {
+    width: 150px; /* Ajuste de ancho para la tarjeta del equipo */
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.team-card .card-img {
+    width: 300px; /* Tamaño de la imagen */
+    height: 300px; /* Ajusta la altura según sea necesario */
+    border-radius: 150px; /* Asegura que la imagen sea redonda */
+
+}
+
+.team-card img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+}
+
+.team-card h3 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.team-card p {
+    font-size: 1rem;
+}
